# crappasswd

./: .env.template  .gitignore  CMakeLists.txt  LICENSE  Makefile  builder.Dockerfile  compose.yml
.devcontainer/: builder.Dockerfile  compose.yml  devcontainer.json
src/: main.c
